# gflib-build

./: .gitignore  CONTRIBUTING.md  README.md  RETRIGGER-NOTES.md  build_rules.json  gflib_build.py  requirements-build.txt
docs/: ARCHITECTURE.md  EXTENDING.md  README.md  SPECIFICATIONS.md  build-fix-provenance.md  build-rules-review.md  cohort-map.md  crater-source-location.md  deb-packaging-maintainers-guide.md  debian-packaging-plan.md  md2pdf.py  migration-milestones.md  prebuild-investigation.md
rust/: .gitignore  Cargo.toml  PARITY_PLAN.md  README.md  WEB_UI_PLAN.md  install-cli.sh  rollback-to-python.sh  run-on-host.sh  tui_smoke.py
rust/src/: build.rs  classify.rs  config.rs  crater.rs  daemon.rs  deb.rs  deb_deps.rs  diffenator3.rs  discover.rs  fontspector.rs  main.rs  mirror.rs  model.rs  monitor.rs  persist.rs  provenance.rs  rules.rs  toolchain.rs  tui.rs  util.rs  venv.rs  web.rs
tests/: README.md  archive_model.py  build_rules.py  clone_retry.py  collect_outputs.py  compiler_provenance.py  concurrency_clone.py  detach_harness.py  disk_usage.py  enqueue_reconcile.py  in_build_retry.py  linger_daemon.py  live_config.py  live_config_race.py  persistence.py  pin_overrides.py  pty_archive.py  pty_cohorts_families.py  pty_completion_banner.py  pty_config.py  pty_config_screen.py  pty_config_unified.py  pty_curses.py  pty_persist_ui.py  pty_pinned_building.py  pty_reconfigure.py  pty_resize_reflow.py  pty_retry_key.py  pty_sections.py  pty_short_terminal.py  pty_status_panel.py  queue_tab.py  reset_config.py  retry_action.py  retry_category.py  (+7 more)
(+5 files in other folders)
