[package]
name = "gflib-build"
version = "0.1.0"
edition = "2021"
description = "Rust port of gflib-build — build the entire Google Fonts library locally (TUI + web + orchestrator)"
license = "Apache-2.0"

[[bin]]
name = "gflib-build"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
toml = "0.8"
crossterm = "0.29"
diffenator3-lib = "1.1.4"
ttj = "1.1.4"

[profile.release]
opt-level = 2
